--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
             <h1>Bem-vinda ao meu site!</h1>
         </header>
         <main>
-            <p>Entre em contato através do:</p>
-            <a href="https://www.google.com">google</a>
+            
         </main>
+        <p>Entre em contato através do:</p>
+            <a href="https://www.google.com">
+                <button onclick="mostrarMensagem()">Me clique</button>
+                </a>
+                <div class="caixa">
+                    <h2>Bem-vinda!</h2>
+                    <p>Esta é uma caixa de conteúdo.</p>
+                    </div>
+                    <div>
+                        <h2>Digite um Número:</h2>
+                        <input type="number" id="numero">
+                        <button onclick="verificarNumero()">verificar</button>
+                        <div id=" resultado"></div>
+                    </div>
+
     </body>
+    <script src="script.js"></script>
 </html>
